compiler/tests/should-pass/code-generation/aby/Y2A.via
host alice : {A}
host bob :   {A}

fun main() {
    let $tmp@Local(host = alice) = 1;
    let $tmp1Yao@YaoABY(client = bob, server = alice) = $tmp;
    let $tmp1Arith@ArithABY(client = bob, server = alice) = $tmp1Yao;
    let $clearTmp@Replication(hosts = {alice, bob}) = $tmp1Arith;
    output $clearTmp to alice;
    output $clearTmp to bob;
}
