compiler/tests/should-fail/MalformedProtocolAnnotation6.via
/* MalformedProtocolAnnotationError */

host alice

fun main() {
    val x:int@BoolABY(server = alice, client = alice) = 5;
}
